Extract plaform entrances for linking to correct edge